--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>S</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Swifty · Chat Assistant Wrapper</title>
   </head>
